fixing the overlap

--- a/index.css
+++ b/index.css
@@ -13,15 +13,15 @@ body{
   
 }
 #headline2{
-width: 1000px;
-height: 800px;
+width: 70%;
+height: 100%;
 position: absolute;
 display: none;
-bottom: 150px;
+bottom: 20%;
 }
 
 #female{
-    margin-left: 400px;
+    margin-left: 25%;
    opacity:0;
     width:50%;
     max-height: 60%;
@@ -30,10 +30,10 @@ bottom: 150px;
 }
 
 #headline1{
-    height: 600px;
+    height: 80%;
     width: 80%;
-    margin-top: 110px;
-margin-left: 300px;
+    margin-top: 11%;
+margin-left: 20%;
 display: none;
 position: absolute; 
 transition: opacity 0.5s ease-in-out;
@@ -69,35 +69,33 @@ transition: opacity 0.5s ease-in-out;
     }
 }
 #sub{
-    position: absolute;
-    margin-left: 830px;
-    margin-top: 150px;
-   height: 500px;
-   width: 600px;
+position: absolute;
+    margin-left: 55%;
+    margin-top: 10%;
+   height: 70%;
+   width: 45%;
    opacity: 0;
    transition: opacity 1s ease-in-out;
 }
 #logo{
-   
-    bottom: 350px;
-    left: 900px;
-    position: absolute;
-    right: 50px;
-    width: 450px;
+    bottom: 48%;
+    left: 60%;
+    position: absolute; 
+    width:30%;
     display: none;
 }
 #learn{
     position: absolute;
-    width:400px;
-    margin-top: 500px;
-    margin-left: 500px;
+    width:27%;
+    margin-top: 33%;
+    margin-left:33%;
     opacity: 0;
     transition: opacity 1.3s ease-in-out;
 }
 #replay{
     position: absolute;
-    margin-top: 620px;
-    margin-left:570px;
+    margin-top: 40%;
+    margin-left:38%;
     opacity: 0;
     transition: opacity 2s ease-in-out;
 }
